--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
 <head>
     <title>War: Never Ever Again!!!</title>
     <link rel="stylesheet" href="main.css" />
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
+    <script src="js/d3.min.js"></script>
+    <script src="js/jquery-1.9.1.min.js"></script>
+    <script src="js/queue.v1.min.js"></script>
+    <script src="js/topojson.v1.min.js"></script>
+    <script src="js/d3-legend.min.js"></script>
+    <!--<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.5.6/d3.min.js"></script>
     <script src="https://code.jquery.com/jquery-1.9.1.min.js"></script>
     <script src="http://d3js.org/queue.v1.min.js"></script>
     <script src="http://d3js.org/topojson.v1.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/1.6.0/d3-legend.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/d3-legend/1.6.0/d3-legend.min.js"></script>-->
 </head>
 <body>
 <h1>War: Never Ever Again!!!</h1>
@@ -34,22 +39,18 @@
       </section>
       <section class="step">
         <!-- case 2 -->
-        <div class="title">Look at Haiti for Some Reason</div>
-          Something interesting to highlight, label, color.
+        <div class="title">Here is Haiti</div>
+          The 2010 Haiti earthquake was a catastrophic magnitude 7.0 Mw earthquake. An estimated three million people were affected by the quake.
       </section>
       <section class="step">
         <!-- case 3 -->
         <div class="title">And here's Rwanda</div>
-          Something interesting to highlight, label, color.
+          The Rwandan Genocide was a genocidal mass slaughter of Tutsi and moderate Hutu in Rwanda by members of the Hutu majority. During the approximate 100-day period from April 7 to mid-July 1994, an estimated 500,000-1,000,000 Rwandans were killed, constituting as much as 70% of the Tutsi and 20% of Rwanda's total population.
       </section>
     </div>
-      <div id="tooltip" class="tooltip">
-          <h3 class="name"></h3>
-          <hr>
-          <div data-metric="urban" class="line">
-              <div class="urban symbol"></div>Mortality Rate
-              <div class="urban val"></div>
-          </div>
+      <div class="col-md-6">
+          <p class="subhead"></p>
+          <div class="subvis"></div>
       </div>
       <div id='vis'>
           <div class="year">
@@ -58,10 +59,6 @@
           </div>
       </div>
   </div>
-</div>
-
-<div id="page_header">
-    <h2>Some more stuff here?</h2>
 </div>
 <div id="extra-space"></div>
 <script src="js/mfreeman_scroller.js"></script>
