--- a/index.html
+++ b/index.html
@@ -50,9 +50,14 @@
         <section class="step">
             <!-- case 4 -->
             <div class="title">These are three line trends</div>
-In 1994, the Rwandan genocide caused an estimated 500,000-1,000,000 Rwandans' death;<br><br>
-In 1997, the Congo civil war resulted in more than 10,000 deaths in Brazzaville alone;<br><br>
-In 1991, 13 civilians were killed and around 1000 in January Events took place in Lithuania.
+            In 1994, the Rwandan genocide caused an estimated 500,000-1,000,000 Rwandans' death;<br><br>
+            In 1997, the Congo civil war resulted in more than 10,000 deaths in Brazzaville alone;<br><br>
+            In 1991, 13 civilians were killed and around 1000 in January Events took place in Lithuania.
+        </section>
+        <section class="step">
+            <!-- case 5 -->
+            <div class="title">Is there any correlation between number of wars/conflict and child mortality?</div>
+            Yes!(2008)
         </section>
     </div>
       <div class="col-md-6">
@@ -74,6 +79,9 @@ In 1991, 13 civilians were killed and around 1000 in January Events took place i
 Soviet troops fire on civilians outside television tower in Vilnius, killing 13 and injuring several hundred; 1993 - Brazauskas elected president. Lithuania joins Council of Europe. New national currency, the litas, introduced. Soviet troops complete withdrawal. -->
           <div class="chart" id="chart2"></div>
       </div>
+      <div id="scatter">
+
+      </div>
   </div>
 </div>
 <div id="extra-space"></div>
@@ -82,6 +90,7 @@ Soviet troops fire on civilians outside television tower in Vilnius, killing 13 
 <script src="js/scroller_settings.js"></script>
 <script src="js/Map.js"></script>
 <script src="js/lineForThree.js"></script>
+<script src="js/scatterplot.js"></script>
 <script>
     onload = function() {
         var $ = function(id) { return document.getElementById(id); };
