--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     <div id="sections">
       <section class="step">
           <div class="title">Under 5 child mortality rate has reduced from 1990 to 2015.</div>
-        (You could also have no title or text in case 0 at all.)
+        (Fact)
       </section>
       <section class="step">
         <!-- case 1 -->
           <div class="title">This is the world map based on child mortality rate</div>
-        This is case 1 now, all the countries shown.
+        All the countries shown.
       </section>
       <section class="step">
         <!-- case 2 -->
@@ -56,8 +56,8 @@
         </section>
         <section class="step">
             <!-- case 5 -->
-            <div class="title">Is there any correlation between number of wars/conflict and child mortality?</div>
-            Yes!(2008)
+            <div class="title">Number of deaths caused by wars/conflict VS child mortality</div>
+            (2008)
         </section>
     </div>
       <div class="col-md-6">
