--- a/index.html
+++ b/index.html
@@ -30,7 +30,8 @@
     <div id="sections">
       <section class="step">
           <div class="title">Under 5 child mortality rate has reduced from 1990 to 2015.</div>
-        (Fact)
+"Since 1990, the world has cut the rate of child deaths by more than one half.
+In 2015, an estimated 5.9 million children under the age of five will still die, equivalent to 11 every minute."-UNICEF
       </section>
       <section class="step">
         <!-- case 1 -->
@@ -59,6 +60,15 @@
             <div class="title">Number of deaths caused by wars/conflict VS child mortality</div>
             (2008)
         </section>
+        <section class="step">
+            <!-- case 6 -->
+            <div class="title">Stacked area chart</div>
+            (Sub-Saharan Africa)
+        </section>
+        <section class="step" style="height: 0px">
+            <!-- case 7 -->
+            <div class="title"></div>
+        </section>
     </div>
       <div class="col-md-6">
           <p class="subhead"></p>
@@ -80,10 +90,13 @@ Soviet troops fire on civilians outside television tower in Vilnius, killing 13 
           <div class="chart" id="chart2"></div>
       </div>
       <div id="scatter">
-
+      </div>
+      <div id="area">
+          <p class="special">Mortality rate by absolute value</p>
       </div>
   </div>
 </div>
+<h1 id="ending">War: Never Ever Again!!!</h1>
 <div id="extra-space"></div>
 
 <script src="js/mfreeman_scroller.js"></script>
@@ -91,6 +104,7 @@ Soviet troops fire on civilians outside television tower in Vilnius, killing 13 
 <script src="js/Map.js"></script>
 <script src="js/lineForThree.js"></script>
 <script src="js/scatterplot.js"></script>
+<script src="js/area.js"></script>
 <script>
     onload = function() {
         var $ = function(id) { return document.getElementById(id); };
