--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>War: Never Ever Again!!!</title>
+    <title>Factors Affecting Child Mortality: Wars</title>
     <link rel="stylesheet" href="main.css" />
     <script src="js/d3.min.js"></script>
     <script src="js/jquery-1.9.1.min.js"></script>
@@ -15,11 +15,11 @@
 </head>
 <body>
 
-<h1 class="bottomstroke">War: Never Ever Again!!!</h1>
+<h1 class="bottomstroke">Factors Affecting Child Mortality: Wars</h1>
 <h3>
     We know that the war is a disaster for everything! Let's take a look at how the war can be a disaster for under five child mortality.
 </h3>
-
+<p>Data Source: <a href="http://www.unicef.org/">UNICEF</a> and <a href="https://www.prio.org/Data/Armed-Conflict/">PRIO</a></p><!--source:  -->
 <div id="page_header">
     <h5>Look how helpless the child was in the Rwanda genocide.</h5>
     <img src="RwandaGenocide.jpg">
@@ -101,7 +101,7 @@ Soviet troops fire on civilians outside television tower in Vilnius, killing 13 
       </div>
   </div>
 </div>
-<h1 id="ending">No more war, happy children!!!</h1>
+<h1 id="ending">In conclusion, we need to work harder in avoiding wars or conflicts in order to get rid of long-term recovering from high child mortality.</h1>
 <div id="extra-space"></div>
 
 <script src="js/mfreeman_scroller.js"></script>
