--- a/index.html
+++ b/index.html
@@ -81,12 +81,13 @@ In 2015, an estimated 5.9 million children under the age of five will still die,
       </div>
       <div id='vis'>
           <div class="year">
+              <p>Slide to update the year shown on the map</p>
               <input id="slider" type="range" min="1990" max="2015" value="2015" step="1" />
               <span id="range">2015</span>
           </div>
       </div>
       <div id="lineForThree">
-          <h2>Click the buttons and hover the lines</h2>
+          <p>Click the buttons and then hover the lines</p><br>
           <a id="button1">Rwandan</a><!--The Rwandan Genocide was a genocidal mass slaughter of Tutsi and moderate Hutu in Rwanda by members of the Hutu majority. During the approximate 100-day period from April 7 to mid-July 1994, an estimated 500,000-1,000,000 Rwandans were killed, constituting as much as 70% of the Tutsi and 20% of Rwanda's total population.-->
           <a id="button2">Congo</a><!--1997 - Full-scale civil war breaks out; pro-Sassou Nguesso forces, aided by Angolan troops, capture Brazzaville, forcing Lissouba to flee.
 1999 - Government and rebels sign a peace deal in Zambia providing for a national dialogue, demilitarisation of political parties and the re-admission of rebel units into the security forces.-->
@@ -97,11 +98,15 @@ Soviet troops fire on civilians outside television tower in Vilnius, killing 13 
       <div id="scatter">
       </div>
       <div id="area">
-          <h2 class="special">Mortality rate by absolute value</h2>
+          <p class="special">Mortality rate by absolute value</p>
       </div>
   </div>
 </div>
-<h1 id="ending">In conclusion, we need to work harder in avoiding wars or conflicts in order to get rid of long-term recovering from high child mortality.</h1>
+<h1 id="ending">
+    In conclusion, we need to work harder in avoiding wars or conflicts in order to get rid of long-term recovering from high child mortality.
+</h1>
+<p class="author">Author: <a href="http://shiyanjiang.com/wp/">Shiyan Jiang</a></p>
+<p class="author">D3 Block: <a href="http://bl.ocks.org/yan2014">Yan</a> </p>
 <div id="extra-space"></div>
 
 <script src="js/mfreeman_scroller.js"></script>
